--- a/templates/linechartmulti39/index.html
+++ b/templates/linechartmulti39/index.html
@@ -140,7 +140,7 @@ Chart.defaults.global.title.display = true
           stacked: false,
           ticks: {
             //max: 5,
-            min: 100,
+            //min: 100,
             //stepSize: 200000,
             callback: function(value, index, values) {
               return value.toLocaleString('en-US');
@@ -171,6 +171,18 @@ Chart.defaults.global.title.display = true
             }
         }]
       },
+      horizontalLine: [{
+                        y: 30,
+                        text: "target",
+                        style: "#CACACA",
+                        
+                    },  
+                    /*{
+                        y: 15,
+                        text: "min"
+                    }*/
+                  ],
+
       tooltips: {
         callbacks: {
           title: function(tooltipItems, data) {
@@ -188,6 +200,52 @@ Chart.defaults.global.title.display = true
     }
   });
 }
+
+var horizonalLinePlugin = {
+                afterDraw: function (chartInstance) {
+                    var yScale = chartInstance.scales["y-axis-0"];
+                    var canvas = chartInstance.chart;
+                    var ctx = canvas.ctx;
+                    var index;
+                    var line;
+                    var style;
+
+                    if (chartInstance.options.horizontalLine) {
+                        for (index = 0; index < chartInstance.options.horizontalLine.length; index++) {
+                            line = chartInstance.options.horizontalLine[index];
+
+                            if (!line.style) {
+                                style = "rgba(169,169,169, .6)";
+                            } else {
+                                style = line.style;
+                            }
+
+                            if (line.y) {
+                                yValue = yScale.getPixelForValue(line.y);
+                            } else {
+                                yValue = 0;
+                            }
+
+                            ctx.lineWidth = 3;
+
+                            if (yValue) {
+                                ctx.beginPath();
+                                ctx.moveTo(0, yValue);
+                                ctx.lineTo(canvas.width, yValue);
+                                ctx.strokeStyle = style;
+                                ctx.stroke();
+                            }
+
+                            if (line.text) {
+                                ctx.fillStyle = style;
+                                ctx.fillText(line.text, 0, yValue + ctx.lineWidth);
+                            }
+                        }
+                        return;
+                    };
+                }
+            };
+            Chart.pluginService.register(horizonalLinePlugin);
 //SPLITTING AND BRINGING IN CSV DATA
 async function getData() {
   const xs = [];
