--- a/templates/linechartmulti46/index.html
+++ b/templates/linechartmulti46/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>NYS Total Under Custody Count</title>
+  <title>People in NYC DOC Custody by Age (Percent)</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
   <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -29,7 +29,7 @@ Chart.defaults.global.title.display = true
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'Age 16-20',
+          label: 'Age 21 & Under',
           data: data.ys,
           fill: false,
           lineTension: 0.5,
@@ -40,13 +40,13 @@ Chart.defaults.global.title.display = true
           pointHoverBackgroundColor: "#2F56A6",
           pointHoverBorderColor: "#2F56A6",
           pointHoverBorderWidth: 2,
-          pointRadius: 3,
+          pointRadius: 0,
           pointHitRadius: 4,
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
         },
         {
-          label: 'Age 21-29',
+          label: 'Age 22-29',
           data: data.ys2,
           fill: false,
           lineTension: 0.5,
@@ -57,7 +57,7 @@ Chart.defaults.global.title.display = true
           pointHoverBackgroundColor: "#2F56A6",
           pointHoverBorderColor: "#2F56A6",
           pointHoverBorderWidth: 2,
-          pointRadius: 3,
+          pointRadius: 0,
           pointHitRadius: 4,
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
@@ -74,7 +74,7 @@ Chart.defaults.global.title.display = true
           pointHoverBackgroundColor: "#2F56A6",
           pointHoverBorderColor: "#2F56A6",
           pointHoverBorderWidth: 2,
-          pointRadius: 3,
+          pointRadius: 0,
           pointHitRadius: 4,
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
@@ -90,7 +90,7 @@ Chart.defaults.global.title.display = true
           pointHoverBackgroundColor: "#2F56A6",
           pointHoverBorderColor: "#2F56A6",
           pointHoverBorderWidth: 2,
-          pointRadius: 3,
+          pointRadius: 0,
           pointHitRadius: 4,
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
@@ -98,7 +98,7 @@ Chart.defaults.global.title.display = true
           label: 'Age 50+',
           data: data.ys5,
           fill: false,
-          borderDash: [20,10],
+          borderDash: [5,5],
           borderDashOffset: 0.0,
           lineTension: 0.5,
           backgroundColor:"#002E14",
@@ -108,8 +108,8 @@ Chart.defaults.global.title.display = true
           pointHoverBackgroundColor: "#2F56A6",
           pointHoverBorderColor: "#2F56A6",
           pointHoverBorderWidth: 2,
-          pointRadius: 3,
-          pointHitRadius: 4,
+          pointRadius: 0,
+          //pointHitRadius: 4,
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
         }
@@ -119,7 +119,7 @@ Chart.defaults.global.title.display = true
       cornerRadius: 20,
       title:{
         display: false,
-        text: 'NYS Total Under Custody Count'
+        text: 'People in NYC DOC Custody by Age'
       },
       scales: {
         yAxes: [{
@@ -129,7 +129,7 @@ Chart.defaults.global.title.display = true
             //min: 100,
             //stepSize: 200000,
             callback: function(value, index, values) {
-              return value.toLocaleString('en-US');
+              return value.toLocaleString('en-US')+'%';
             },
             beginAtZero: true,
           },
@@ -138,7 +138,7 @@ Chart.defaults.global.title.display = true
           },
           scaleLabel: {
             display: true,
-            labelString: 'Total in NYS DOCCS Custody'
+            labelString: 'People in NYC DOC Custody'
           }
         }],
         xAxes: [{
@@ -163,7 +163,7 @@ Chart.defaults.global.title.display = true
             return tooltipItems[0].xLabel;
           },
           label: function(tooltipItem, data) {
-            return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' People';
+            return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ '%';
           },
         },
         //  backgroundColor: '#434343',
@@ -184,7 +184,7 @@ async function getData() {
   const ys5 = [];
   const ys6 = [];
 
-  const response = await fetch('total_under_custody_count_NYS.csv');
+  const response = await fetch('total_under_custody_perc_NYC.csv');
   const data = await response.text();
 
   const table = data.split('\n').slice(1);
@@ -193,9 +193,9 @@ async function getData() {
     const one = columns[0];
     xs.push(one);
     const two = columns[1];
-    ys.push(parseFloat(two)); //make data from string to number and added mean payers of 14 degrees
+    ys.push(parseFloat(two)); //make data from string to number 
     const three = columns[2];
-    ys2.push(parseFloat(three)); //make data from string to number and added mean payers of 14 degrees
+    ys2.push(parseFloat(three)); //make data from string to number 
     const four = columns[3];
     ys3.push(parseFloat(four)); //make data from string to number
     const five = columns[4];
