--- a/templates/line25/index.html
+++ b/templates/line25/index.html
@@ -31,7 +31,7 @@
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'HPD Lead Litigation Cases',
+          label: 'HPD Lead Violations',
           data: data.ys,
           fill: false,
           lineTension: 0.5,
@@ -42,7 +42,7 @@
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#2F56A6",
+        /*pointBorderColor: "#2F56A6",
         pointBackgroundColor: "#2F56A6",
           pointBorderWidth: 1,
           pointHoverRadius: 6,
@@ -50,7 +50,7 @@
           pointHoverBorderColor: "#E6E6E6",
           pointHoverBorderWidth: 2,
           pointRadius: 5,
-          pointHitRadius: 4,
+          pointHitRadius: 4,*/
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
         }]
@@ -59,7 +59,7 @@
         cornerRadius: 20,
         title:{
         display: false,
-        text: 'HPD Lead Litigation Cases'
+        text: 'HPD Lead Violations'
       },
         scales: {
           yAxes: [{
@@ -77,13 +77,13 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'HPD Lead Litigation Casess'
+              labelString: 'HPD Lead Violations'
             }
           }],
           xAxes: [{
             scaleLabel:{
               display: false,
-              labelString: 'August 2006 - March 2023'
+              labelString: '2018 - March 2023'
             },
             ticks: {
               callback: function(value, index, values) {
@@ -99,7 +99,7 @@
         tooltips: {
           callbacks: {
             label: function(tooltipItem, data) {
-              return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Lead Cases';
+              return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Lead Violations';
             },
           },
         //  backgroundColor: '#434343',
@@ -130,17 +130,17 @@ myChart.update();
     const xs = [];
     const ys = [];
 
-    const response = await fetch('https://newyorkcitycouncil.github.io/lead_hearing/data/litigations_over_time.csv');
+    const response = await fetch('lead-paint_vios_over-time-month-year.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
     table.forEach(row => {
       const columns = row.split(',');
       const date = columns[0];
-      xs.push(date.replace(/['"]+/g, '')); //remove double quotes from string ""
+      xs.push(date); 
       const evictions = columns[1];
       ys.push(parseFloat(evictions));
-      //make data from string to number and added mean payers of 14 degrees
+      //make data from string to number 
 
 
 
