--- a/templates/linechartmulti50/index.html
+++ b/templates/linechartmulti50/index.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>NYCHA: Vacancy Rate by Borough</title>
+  <title>Cure Violence 2016 Precincts - Shootings per 100,000 People</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.5/chartjs-plugin-annotation.js'></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
   <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
   <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>
@@ -29,7 +30,7 @@ Chart.defaults.global.title.display = true
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'All',
+          label: 'Precinct 23 (Mn)',
           data: data.ys,
           fill: false,
           lineTension: 0.5,
@@ -46,7 +47,7 @@ Chart.defaults.global.title.display = true
           hoverBorderColor: "#E6E6E6",
         },
         {
-          label: 'Bronx',
+          label: 'Precinct 32 (Mn)',
           data: data.ys2,
           fill: false,
           lineTension: 0.5,
@@ -63,7 +64,7 @@ Chart.defaults.global.title.display = true
           hoverBorderColor: "#E6E6E6",
         },
         {
-          label: 'Brooklyn',
+          label: 'Precinct 44 (Bx)',
           data: data.ys3,
           fill: false,
           lineTension: 0.5,
@@ -79,7 +80,7 @@ Chart.defaults.global.title.display = true
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
         },{
-          label: 'Manhattan',
+          label: 'Precinct 47 (Bx)',
           data: data.ys4,
           fill: false,
           lineTension: 0.5,
@@ -95,7 +96,7 @@ Chart.defaults.global.title.display = true
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
         },{
-          label: 'Queens',
+          label: 'Precinct 60 (Bk)',
           data: data.ys5,
           fill: false,
           lineTension: 0.5,
@@ -111,7 +112,7 @@ Chart.defaults.global.title.display = true
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
         },{
-          label: 'Staten Island',
+          label: 'Precinct 114 (Qn)',
           data: data.ys6,
           fill: false,
           lineTension: 0.5,
@@ -133,7 +134,7 @@ Chart.defaults.global.title.display = true
       cornerRadius: 20,
       title:{
         display: false,
-        text: 'NYCHA: Vacancy Rate by Borough'
+        text: 'Shootings per 100,000 People'
       },
       scales: {
         yAxes: [{
@@ -143,8 +144,9 @@ Chart.defaults.global.title.display = true
             //min: 100,
             //stepSize: 200000,
             callback: function(value, index, values) {
-              return value.toLocaleString('en-US')+'%';
+              return value.toLocaleString('en-US');
             },
+            
             beginAtZero: true,
           },
           gridLines: {
@@ -152,7 +154,7 @@ Chart.defaults.global.title.display = true
           },
           scaleLabel: {
             display: true,
-            labelString: 'Vacancy Rate (%)'
+            labelString: 'Shootings per 100,000 People'
           }
         }],
         xAxes: [{
@@ -167,10 +169,31 @@ Chart.defaults.global.title.display = true
           },
           scaleLabel: {
               display: false,
-              labelString: 'Date'
+              labelString: 'Year'
             }
         }]
       },
+      annotation: {
+	        events: ["click"],
+	        annotations: [
+	          {
+	            drawTime: "beforeDatasetsDraw",
+	            type: "box",
+	            xScaleID: "x-axis-0",
+	            yScaleID: "y-axis-0",
+	            xMin: "2016",
+	            xMax: "2019",
+	            yMin: 0,
+	            yMax: 90,
+	            backgroundColor: "rgba(230, 230, 230, 0.5)",
+	            borderColor: "rgb(230, 230, 230)",
+	            borderWidth: 1,
+	            onClick: function(e) {
+	              console.log("Box", e.type, this);
+	            }
+	          },
+	        ]
+	      },
       tooltips: {
         callbacks: {
           title: function(tooltipItems, data) {
@@ -198,7 +221,7 @@ async function getData() {
   const ys5 = [];
   const ys6 = [];
 
-  const response = await fetch('NYCHA_Vacancies_1-19-2023_vacancy_rate_boro.csv');
+  const response = await fetch('2016_cohort_shootings_per_person_2012-2019.csv');
   const data = await response.text();
 
   const table = data.split('\n').slice(1);
