--- a/templates/linechartmulti52/index.html
+++ b/templates/linechartmulti52/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Cure Violence 2016 Precincts - Shootings per 100,000 People</title>
+  <title>Cure Violence 2014 Precincts - Shootings per 100,000 People</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.5/chartjs-plugin-annotation.js'></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
@@ -30,94 +30,12 @@ Chart.defaults.global.title.display = true
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'Precinct 23 (Mn)',
+          label: 'Precinct 120 (SI)',
           data: data.ys,
           fill: false,
           lineTension: 0.5,
           backgroundColor:"#2F56A6",
           borderColor: "#2F56A6",
-          //pointBorderWidth: 4,
-          pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#2F56A6",
-          pointHoverBorderColor: "#2F56A6",
-          pointHoverBorderWidth: 2,
-          pointRadius: 3,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
-        },
-        {
-          label: 'Precinct 32 (Mn)',
-          data: data.ys2,
-          fill: false,
-          lineTension: 0.5,
-          backgroundColor:"#979797",
-          borderColor: "#979797",
-          //pointBorderWidth: 4,
-          pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#2F56A6",
-          pointHoverBorderColor: "#2F56A6",
-          pointHoverBorderWidth: 2,
-          pointRadius: 3,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
-        },
-        {
-          label: 'Precinct 44 (Bx)',
-          data: data.ys3,
-          fill: false,
-          lineTension: 0.5,
-          backgroundColor:"#211183",
-          borderColor: "#211183",
-          //pointBorderWidth: 4,
-          pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#2F56A6",
-          pointHoverBorderColor: "#2F56A6",
-          pointHoverBorderWidth: 2,
-          pointRadius: 3,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
-        },{
-          label: 'Precinct 47 (Bx)',
-          data: data.ys4,
-          fill: false,
-          lineTension: 0.5,
-          //backgroundColor:"#D6593F",
-          borderColor: "#D6593F",
-          //pointBorderWidth: 4,
-          pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#2F56A6",
-          pointHoverBorderColor: "#2F56A6",
-          pointHoverBorderWidth: 2,
-          pointRadius: 3,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
-        },{
-          label: 'Precinct 60 (Bk)',
-          data: data.ys5,
-          fill: false,
-          lineTension: 0.5,
-          backgroundColor:"#002E14",
-          borderColor: "#002E14",
-          //pointBorderWidth: 4,
-          pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#2F56A6",
-          pointHoverBorderColor: "#2F56A6",
-          pointHoverBorderWidth: 2,
-          pointRadius: 3,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
-        },{
-          label: 'Precinct 114 (Qn)',
-          data: data.ys6,
-          fill: false,
-          lineTension: 0.5,
-          backgroundColor:"#9D9DFF",
-          borderColor: "#9D9DFF",
           //pointBorderWidth: 4,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#2F56A6",
@@ -134,7 +52,7 @@ Chart.defaults.global.title.display = true
       cornerRadius: 20,
       title:{
         display: false,
-        text: 'Shootings per 100,000 People'
+        text: '2014 Cohort: Cure Volence Precincts'
       },
       scales: {
         yAxes: [{
@@ -169,7 +87,7 @@ Chart.defaults.global.title.display = true
           },
           scaleLabel: {
               display: true,
-              labelString: '2016 Cohort: Cure Volence Precincts'
+              labelString: '2014 Cohort: Cure Volence Precincts'
             }
         }]
       },
@@ -181,10 +99,10 @@ Chart.defaults.global.title.display = true
 	            type: "box",
 	            xScaleID: "x-axis-0",
 	            yScaleID: "y-axis-0",
-	            xMin: "2016",
+	            xMin: "2014",
 	            xMax: "2019",
 	            yMin: 0,
-	            yMax: 90,
+	            yMax: 50,
 	            backgroundColor: "rgba(230, 230, 230, 0.5)",
 	            borderColor: "rgb(230, 230, 230)",
 	            borderWidth: 1,
@@ -221,7 +139,7 @@ async function getData() {
   const ys5 = [];
   const ys6 = [];
 
-  const response = await fetch('2016_cohort_shootings_per_person_2012-2019.csv');
+  const response = await fetch('2014_cohort_shootings_per_person_2012-2019.csv');
   const data = await response.text();
 
   const table = data.split('\n').slice(1);
